package testmodel;

option optimize_for = LITE_RUNTIME;
option java_package = "com.dyuproject.protostuff.model";
option java_outer_classname = "V2Lite";

message Person {
  required int32 id = 1;
  optional string email = 2;
  optional string first_name = 3;
  optional string lastName = 4;
  
  repeated Task _delegated_task_ = 5;
  repeated Task _priorityTask_ = 6;
  optional int32 _aGe_ = 7;
  optional Task currentTask = 8;
  repeated int64 repeatedLong = 9;
  repeated bytes image = 10;
}

message Task {
  required int32 _id = 1;
  optional string name_ = 2;
  optional string _description_ = 3;
  enum Status {
    PENDING = 0;
    STARTED = 1;
    COMPLETED = 2;
  }
  optional Status status = 4;
  optional bytes attachment = 5;
  optional bool aboolean = 6;
  optional float afloat = 7;
  optional double adouble = 8;
  optional int64 along = 9;
}